# librtdebug

./: CMakeLists.txt  Makefile  README.md
conda.recipe/: meta.yaml
examples/: hello_world.cpp
src/: CMakeLists.txt  CRTDebug.cpp  CRTDebug.h
src/include/: config.h.in  rtdebug.h
